--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,697 @@
-/*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+body {
+  font-family: "Raleway", sans-serif;
+  color: #040615;
+}
+
+nav {
+  width: 100%;
+  height: 80px;
+  background: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3%;
+  z-index: 1;
+}
+
+nav {
+  position: fixed;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+nav .logo {
+  font-size: 30px;
+  font-weight: 700;
+}
+nav a {
+  color: #2d2e32;
+  text-decoration: none;
+}
+nav li {
+  color: #2d2e32;
+  list-style: none;
+  font-weight: 600;
+}
+nav li:hover {
+  border-bottom: 3px solid black;
+}
+nav li.active {
+  border-bottom: 3px solid black;
+}
+nav .desktop-view ul {
+  display: flex;
+  font-size: 17px;
+}
+nav .desktop-view ul li:not(:last-of-type) {
+  margin: 0 20px 0 0;
+}
+@media (max-width: 900px) {
+  nav .desktop-view {
+    display: none;
+  }
+}
+nav .mobile-view {
+  position: absolute;
+  background: #ffffff;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform: translateX(-100%);
+  transition: 500ms ease-in-out;
+}
+nav .mobile-view.show {
+  transform: translateX(0%);
+}
+nav .mobile-view ul {
+  font-size: 40px;
+}
+nav .mobile-view li {
+  margin: 30px 0;
+  text-align: center;
+}
+nav .mobile-view .x {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 45px;
+  right: 27px;
+  cursor: pointer;
+}
+nav .mobile-view .line {
+  width: 100%;
+  height: 4px;
+  background-color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(-50%);
+}
+nav .mobile-view .line1 {
+  transform: rotate(45deg);
+}
+nav .mobile-view .line2 {
+  transform: rotate(-45deg);
+}
+nav .hamburger-menu {
+  display: none;
+  cursor: pointer;
+}
+@media (max-width: 900px) {
+  nav .hamburger-menu {
+    display: block;
+  }
+}
+nav .bar {
+  width: 30px;
+  height: 3px;
+  background-color: #2d2e32;
+  margin: 5px 0;
+  transition: 0.4s;
+}
+
+#home {
+  background: #040615;
+  width: 100%;
+  padding: 0 30px;
+  min-height: 100vh;
+  color: #ffffff;
+}
+#home .content {
+  padding: 150px 0 70px;
+  width: 100%;
+  height: 100%;
+  max-width: 990px;
+  margin: 0 auto;
+}
+#home .content .home-main {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 100px;
+}
+@media (max-width: 900px) {
+  #home .content .home-main {
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+  }
+  #home .content .home-main .home-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+#home .content .home-main .home-text h1 {
+  font-weight: 700;
+  font-size: 55px;
+  line-height: 66px;
+  margin-bottom: 19px;
+}
+@media (max-width: 300px) {
+  #home .content .home-main .home-text h1 {
+    font-size: 40px;
+  }
+}
+#home .content .home-main .home-text p {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 29px;
+  margin-bottom: 26px;
+}
+#home .content .home-main .home-text span {
+  display: flex;
+  flex-direction: row;
+  gap: 13px;
+}
+#home .content .home-main .home-text span a {
+  text-decoration: none;
+}
+#home .content .home-main .home-text span a svg path {
+  fill: #ffffff;
+}
+#home .content .home-main .home-text span a svg path:hover {
+  fill: #2d2e32;
+}
+#home .content .home-main .home-img {
+  max-width: 350px;
+  width: 100%;
+  height: 350px;
+  animation: blobby 10s ease-in-out alternate infinite;
+}
+#home .content .home-main .home-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: fill;
+     object-fit: fill;
+  animation: blobby 10s ease-in-out alternate infinite;
+}
+#home .content .skills {
+  margin-top: 90px;
+  padding: 0 30px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 70px;
+  align-items: center;
+  flex-direction: column;
+}
+#home .content .skills p {
+  font-weight: 600;
+  font-size: 17px;
+  line-height: 21px;
+  padding: 0 0 15px 0 !important;
+  border-bottom: 1px solid #ffffff;
+  border-right: none !important;
+}
+#home .content .skills ul {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 25px;
+  align-items: center;
+  justify-content: center;
+}
+#home .content .skills ul li {
+  cursor: pointer;
+  list-style: none;
+  background: #ffffff;
+  width: 65px;
+  height: 65px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.09);
+  border-radius: 33px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+#home .content .skills ul li img {
+  width: 50px;
+  height: 100%;
+}
+#home .content .skills ul li:nth-of-type(1):hover::after {
+  content: "HTML5";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(2):hover::after {
+  content: "CSS3";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(3):hover::after {
+  content: "JavaScript";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(4):hover::after {
+  content: "React JS";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(5):hover::after {
+  content: "TypeScript";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(6):hover::after {
+  content: "Redux";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(7):hover::after {
+  content: "SASS/SCSS";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(8):hover::after {
+  content: "Tailwind CSS";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(9):hover::after {
+  content: "Git";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+#home .content .skills ul li:nth-of-type(10):hover::after {
+  content: "Node.js";
+  background: #040615;
+  color: #ffffff;
+  position: absolute;
+  top: -10px;
+  text-align: center;
+  padding: 2px 3px;
+}
+
+@keyframes blobby {
+  0% {
+    border-radius: 60% 40% 70% 30%;
+  }
+  25% {
+    border-radius: 70% 30% 60% 80%;
+  }
+  50% {
+    border-radius: 40% 60% 30% 70%;
+  }
+  75% {
+    border-radius: 50% 40% 70% 30%;
+  }
+  100% {
+    border-radius: 60% 40% 70% 90%;
+  }
+}
+#about {
+  background: #ffffff;
+  padding: 150px 30px;
+}
+#about .about-content {
+  margin: 0 auto;
+  max-width: 990px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+@media (max-width: 900px) {
+  #about .about-content {
+    flex-direction: column;
+  }
+  #about .about-content .img-side {
+    max-width: 100%;
+    width: 100%;
+  }
+}
+#about .about-content .img-side,
+#about .about-content .text-side {
+  width: 100%;
+  max-width: 450px;
+}
+#about .about-content .img-side {
+  position: relative;
+}
+#about .about-content .img-side .about-img {
+  width: 100%;
+}
+#about .about-content .img-side span {
+  display: block;
+  width: 190px;
+  height: 190px;
+  border-radius: 95px;
+  background: #ffffff;
+  position: absolute;
+  bottom: -100px;
+  right: 0;
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 900px) {
+  #about .about-content .img-side span {
+    display: none;
+  }
+}
+#about .about-content .img-side span img {
+  width: 80px;
+  height: 80px;
+  display: block;
+  position: absolute;
+  left: 59px;
+}
+@media (max-width: 900px) {
+  #about .about-content .text-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #about .about-content .text-side p {
+    text-align: center;
+  }
+}
+#about .about-content .text-side h1 {
+  text-transform: uppercase;
+  color: #147efb;
+  font-size: 17px;
+  line-height: 26px;
+  font-weight: 700;
+  margin-bottom: 11px;
+}
+#about .about-content .text-side h3 {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 35px;
+  margin-bottom: 20px;
+}
+#about .about-content .text-side p {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 26px;
+  color: #767676;
+}
+#about .img-slide {
+  margin: 0 auto;
+  max-width: 990px;
+  width: 100%;
+  margin-top: 5rem;
+  overflow: hidden;
+  white-space: nowrap;
+  position: relative;
+}
+#about .img-slide:hover .img-slider {
+  animation-play-state: paused;
+}
+#about .img-slide::before, #about .img-slide::after {
+  position: absolute;
+  top: 0;
+  width: 200px;
+  height: 100%;
+  content: "";
+  z-index: 1;
+}
+#about .img-slide::before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
+}
+#about .img-slide::after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
+}
+#about .img-slide .img-slider {
+  display: inline-block;
+  animation: 20s slide infinite linear;
+}
+#about .img-slide .img-slider img {
+  width: 250px;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 2rem;
+  margin-right: 2rem;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+#projects {
+  background: #040615;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+}
+#projects .project-content {
+  max-width: 990px;
+  width: 100%;
+  padding: 150px 30px;
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 900px) {
+  #projects .project-content {
+    align-items: center;
+  }
+  #projects .project-content p {
+    text-align: center;
+  }
+}
+#projects .project-content h1 {
+  color: #147efb;
+  font-size: 17px;
+  line-height: 26px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin-bottom: 12px;
+}
+#projects .project-content p {
+  font-weight: 700;
+  line-height: 38px;
+  font-size: 25px;
+  margin-bottom: 62px;
+  color: #ffffff;
+}
+#projects .project-content .project-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 86px;
+  align-items: center;
+}
+#projects .project-content .project-grid .project {
+  width: 100%;
+  max-width: 800px;
+  background: #f9f9f9;
+  border-radius: 17px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+  gap: 20px;
+}
+@media (max-width: 900px) {
+  #projects .project-content .project-grid .project {
+    flex-direction: column-reverse !important;
+    gap: 20px;
+  }
+}
+#projects .project-content .project-grid .project .project-text {
+  width: 100%;
+  max-width: 300px;
+}
+#projects .project-content .project-grid .project .project-text h3 {
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 26px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+#projects .project-content .project-grid .project .project-text .description {
+  font-weight: 500 !important;
+  font-size: 17px !important;
+  line-height: 26px !important;
+  text-align: center !important;
+  color: #767676 !important;
+  margin-bottom: 20px !important;
+}
+#projects .project-content .project-grid .project .project-text .stacks {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-bottom: 30px;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+#projects .project-content .project-grid .project .project-text .stacks p {
+  padding: 10px 13px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  font-weight: 600 !important;
+  font-size: 17px !important;
+  line-height: 21px !important;
+  text-align: center !important;
+  color: #000000 !important;
+  margin: 0 !important;
+}
+#projects .project-content .project-grid .project .project-text .link {
+  display: flex;
+  gap: 3px;
+  align-items: center;
+  justify-content: space-evenly;
+}
+#projects .project-content .project-grid .project .project-text .link a {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 17px;
+  text-align: center;
+  color: #000000;
+  display: inline-flex;
+  align-items: center;
+  gap: 5px;
+}
+#projects .project-content .project-grid .project .project-img {
+  width: 100%;
+  max-width: 530px;
+  height: 100%;
+  border-radius: 17px;
+}
+#projects .project-content .project-grid .project .project-img img {
+  width: 100%;
+  height: 100%;
+  border-radius: 17px;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+#projects .project-content .project-grid .project:nth-child(odd) {
+  flex-direction: row-reverse;
+}
+
+#contact {
+  background: #ffffff;
+  padding: 110px 30px;
+}
+#contact .contact-content {
+  width: 100%;
+  max-width: 990px;
+  margin: 0 auto;
+}
+@media (max-width: 900px) {
+  #contact .contact-content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  #contact .contact-content .contact-title h1 {
+    text-align: center;
+  }
+  #contact .contact-content .contact-title h2 {
+    text-align: center;
+  }
+  #contact .contact-content .contact-area .contact-box {
+    display: flex;
+    flex-direction: column !important;
+    justify-content: center;
+    align-items: center;
+  }
+  #contact .contact-content .contact-area .contact-box .contact-info h1 {
+    text-align: center;
+  }
+  #contact .contact-content .contact-area .contact-box .contact-info p a {
+    text-align: center;
+  }
+}
+#contact .contact-content .contact-title {
+  margin-bottom: 60px;
+}
+#contact .contact-content .contact-title h1 {
+  color: #147efb;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 26px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+#contact .contact-content .contact-title h2 {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 38px;
+}
+#contact .contact-content .contact-area .contact-box {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 15px;
+}
+#contact .contact-content .contact-area .contact-box span {
+  width: 76px;
+  height: 77px;
+  border-radius: 38px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  padding: 23px 23px 24px;
+}
+#contact .contact-content .contact-area .contact-box .contact-info h1 {
+  font-weight: 700;
+  line-height: 26px;
+  font-size: 17px;
+}
+#contact .contact-content .contact-area .contact-box .contact-info p a {
+  font-weight: 400;
+  font-size: 17px;
+  text-decoration: none;
+  color: #767676;
+}/*# sourceMappingURL=style.css.map */
