--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -14,6 +15,8 @@ body {
   color: #040615;
 }
 
+
+/* Navbar section */
 nav {
   width: 100%;
   height: 80px;
@@ -123,6 +126,7 @@ nav .bar {
   transition: 0.4s;
 }
 
+/* Home Section */
 #home {
   background: #040615;
   width: 100%;
@@ -351,6 +355,8 @@ nav .bar {
     border-radius: 60% 40% 70% 90%;
   }
 }
+
+/* About Section */
 #about {
   background: #ffffff;
   padding: 150px 30px;
@@ -489,6 +495,8 @@ nav .bar {
     transform: translateX(-100%);
   }
 }
+
+/* Project Section */
 #projects {
   background: #040615;
   width: 100%;
@@ -534,7 +542,7 @@ nav .bar {
 }
 #projects .project-content .project-grid .project {
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
   background: #f9f9f9;
   border-radius: 17px;
   padding: 20px;
@@ -620,6 +628,8 @@ nav .bar {
   flex-direction: row-reverse;
 }
 
+
+/* Contact Section */
 #contact {
   background: #ffffff;
   padding: 110px 30px;
