--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap");
-
 * {
   margin: 0;
   padding: 0;
@@ -15,8 +14,6 @@ body {
   color: #040615;
 }
 
-
-/* Navbar section */
 nav {
   width: 100%;
   height: 80px;
@@ -25,10 +22,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 3%;
-  z-index: 1;
-}
-
-nav {
+  z-index: 5;
   position: fixed;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
@@ -126,7 +120,6 @@ nav .bar {
   transition: 0.4s;
 }
 
-/* Home Section */
 #home {
   background: #040615;
   width: 100%;
@@ -355,8 +348,6 @@ nav .bar {
     border-radius: 60% 40% 70% 90%;
   }
 }
-
-/* About Section */
 #about {
   background: #ffffff;
   padding: 150px 30px;
@@ -446,57 +437,143 @@ nav .bar {
   line-height: 26px;
   color: #767676;
 }
-#about .img-slide {
+#about .gallery {
   margin: 0 auto;
   max-width: 990px;
   width: 100%;
-  margin-top: 5rem;
   overflow: hidden;
-  white-space: nowrap;
+  margin-top: 3rem;
+}
+#about .gallery .gallary-container {
+  align-items: center;
+  display: flex;
+  height: 400px;
+  margin: 0 auto;
+  max-width: 990px;
   position: relative;
 }
-#about .img-slide:hover .img-slider {
-  animation-play-state: paused;
-}
-#about .img-slide::before, #about .img-slide::after {
-  position: absolute;
-  top: 0;
-  width: 200px;
-  height: 100%;
-  content: "";
-  z-index: 1;
-}
-#about .img-slide::before {
-  left: 0;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-}
-#about .img-slide::after {
-  right: 0;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-}
-#about .img-slide .img-slider {
-  display: inline-block;
-  animation: 20s slide infinite linear;
-}
-#about .img-slide .img-slider img {
-  width: 250px;
+#about .gallery .gallary-container .gallery-item {
   height: 250px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  border-radius: 2rem;
-  margin-right: 2rem;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  width: 300px;
+  z-index: 0;
+  border-radius: 15px;
+  background-size: contain;
+}
+#about .gallery .gallary-container .gallery-item-1 {
+  left: 15%;
+  opacity: 0.4;
+  transform: translateX(-50%);
+}
+#about .gallery .gallary-container .gallery-item-2,
+#about .gallery .gallary-container .gallery-item-4 {
+  height: 300px;
+  opacity: 0.8;
+  z-index: 1;
+  width: 380px;
+}
+#about .gallery .gallary-container .gallery-item-2 {
+  left: 30%;
+  transform: translateX(-50%);
+}
+#about .gallery .gallary-container .gallery-item-3 {
+  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.035);
+  height: 300px;
+  opacity: 1;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 430px;
+  z-index: 2;
+}
+#about .gallery .gallary-container .gallery-item-4 {
+  left: 70%;
+  transform: translateX(-50%);
+}
+#about .gallery .gallary-container .gallery-item-5 {
+  left: 85%;
+  opacity: 0.4;
+  transform: translateX(-50%);
+}
+#about .gallery .gallery-controls {
+  display: flex;
+  justify-content: center;
+  margin: 25px 0;
+  height: 100px;
+}
+#about .gallery .gallery-controls button {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  font-size: 30px;
+  margin: 0 50px;
+  padding: 0 12px;
+  text-transform: capitalize;
+}
+#about .gallery .gallery-controls button:focus {
+  outline: none;
+}
+#about .gallery .gallery-controls-previous {
+  position: relative;
+}
+#about .gallery .gallery-controls-previous::before {
+  border: solid #000;
+  border-width: 0 5px 5px 0;
+  content: "";
+  display: inline-block;
+  height: 5px;
+  left: -30px;
+  padding: 10px;
+  position: absolute;
+  top: 25%;
+  transform: rotate(135deg) translateY(-50%);
+  transition: left 0.15s ease-in-out;
+  width: 5px;
+}
+#about .gallery .gallery-controls-previous:hover::before {
+  left: 40px;
+}
+#about .gallery .gallery-controls-next {
+  position: relative;
+}
+#about .gallery .gallery-controls-next::before {
+  border: solid #000;
+  border-width: 0 5px 5px 0;
+  content: "";
+  display: inline-block;
+  height: 5px;
+  right: -30px;
+  padding: 10px;
+  position: absolute;
+  top: 45%;
+  transform: rotate(-45deg) translateY(-50%);
+  transition: right 0.15s ease-in-out;
+  width: 5px;
+}
+#about .gallery .gallery-controls-next:hover::before {
+  right: -40px;
+}
+#about .gallery .gallery-nav {
+  bottom: 15px;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  position: absolute;
+  width: 100%;
+}
+#about .gallery .gallery-nav li {
+  background: #ccc;
+  border-radius: 50%;
+  height: 10px;
+  margin: 0 16px;
+  width: 10px;
+}
+#about .gallery .gallery-nav li.gallery-item-selected {
+  background: #555;
 }
 
-@keyframes slide {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-/* Project Section */
 #projects {
   background: #040615;
   width: 100%;
@@ -542,7 +619,7 @@ nav .bar {
 }
 #projects .project-content .project-grid .project {
   width: 100%;
-  max-width: 1000px;
+  max-width: 800px;
   background: #f9f9f9;
   border-radius: 17px;
   padding: 20px;
@@ -628,8 +705,6 @@ nav .bar {
   flex-direction: row-reverse;
 }
 
-
-/* Contact Section */
 #contact {
   background: #ffffff;
   padding: 110px 30px;
